MDEV-16757 Memory leak after adding manually min/max statistical data            for blob column

Moved delete_stat_values_for_table_share() call to proper place.